feat(system-objects): add Arrow conversion layer